syntax = "proto3";

package order;

option go_package= "./order";

service OrderService{
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
}

message CreateOrderRequest{
  int64 companyId = 1;
  CreateOrderCustomerRequest customer = 2;
  repeated CreateOrderProductRequest products = 3;
}

message CreateOrderCustomerRequest {
    string firstName = 1;
    optional string lastName = 2;
    string phone = 3;
    string identificationNumber = 4;
    string identificationType = 5;
}

message CreateOrderProductRequest {
    string productId = 1;
    uint64 quantity = 2;
    uint64 price = 3;
}

message CreateOrderResponse{
  int64 status = 1;
  string error = 2;
}